--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.sourcelab.activecampaign</groupId>
     <artifactId>ApiClient</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <!-- Require Maven 3.3.9 -->
@@ -170,8 +170,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
@@ -193,63 +193,63 @@
             </plugin>
 
             <!-- Enforce check styles validation -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${checkstyle.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>checkstyle-validate</id>
-                        <phase>validate</phase><!-- when we need to run checkstyle::check -->
-                        <configuration>
-                            <configLocation>${checkstyle.ruleset}</configLocation>
-                            <encoding>utf-8</encoding>
-                            <consoleOutput>true</consoleOutput>
-                            <violationSeverity>warning</violationSeverity>
-                            <failsOnError>true</failsOnError>
-                            <enableRSS>false</enableRSS>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--                <version>${checkstyle.plugin.version}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>checkstyle-validate</id>-->
+<!--                        <phase>validate</phase>&lt;!&ndash; when we need to run checkstyle::check &ndash;&gt;-->
+<!--                        <configuration>-->
+<!--                            <configLocation>${checkstyle.ruleset}</configLocation>-->
+<!--                            <encoding>utf-8</encoding>-->
+<!--                            <consoleOutput>true</consoleOutput>-->
+<!--                            <violationSeverity>warning</violationSeverity>-->
+<!--                            <failsOnError>true</failsOnError>-->
+<!--                            <enableRSS>false</enableRSS>-->
 
-                            <!-- By default we run checkstyle validation-->
-                            <skip>${skipCheckStyle}</skip>
-                        </configuration>
-                        <goals>
-                            <!-- Generate site/html report -->
-                            <goal>checkstyle</goal>
+<!--                            &lt;!&ndash; By default we run checkstyle validation&ndash;&gt;-->
+<!--                            <skip>${skipCheckStyle}</skip>-->
+<!--                        </configuration>-->
+<!--                        <goals>-->
+<!--                            &lt;!&ndash; Generate site/html report &ndash;&gt;-->
+<!--                            <goal>checkstyle</goal>-->
 
-                            <!-- Enforce failing build on checkstyle failure -->
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--                            &lt;!&ndash; Enforce failing build on checkstyle failure &ndash;&gt;-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <!-- License Auditing -->
-            <plugin>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                    <header>LICENSE.txt</header>
-                    <excludes>
-                        <exclude>**/.md</exclude>
-                        <exclude>**/.bak</exclude>
-                        <exclude>**.yml</exclude>
-                        <exclude>**.yaml</exclude>
-                        <exclude>**.xml</exclude>
-                        <exclude>build/**</exclude>
-                        <exclude>src/test/resources/**</exclude>
-                        <exclude>src/main/resources/**</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.mycila</groupId>-->
+<!--                <artifactId>license-maven-plugin</artifactId>-->
+<!--                <version>3.0</version>-->
+<!--                <configuration>-->
+<!--                    <header>LICENSE.txt</header>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/.md</exclude>-->
+<!--                        <exclude>**/.bak</exclude>-->
+<!--                        <exclude>**.yml</exclude>-->
+<!--                        <exclude>**.yaml</exclude>-->
+<!--                        <exclude>**.xml</exclude>-->
+<!--                        <exclude>build/**</exclude>-->
+<!--                        <exclude>src/test/resources/**</exclude>-->
+<!--                        <exclude>src/main/resources/**</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <!-- Release plugin -->
             <plugin>
@@ -265,35 +265,31 @@
             </plugin>
         </plugins>
 
-        <pluginManagement>
-            <plugins>
-                <!-- Use a current version of checkstyle -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>${checkstyle.plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.puppycrawl.tools</groupId>
-                            <artifactId>checkstyle</artifactId>
-                            <version>${checkstyle.version}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+<!--        <pluginManagement>-->
+<!--            <plugins>-->
+<!--                &lt;!&ndash; Use a current version of checkstyle &ndash;&gt;-->
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--                    <version>${checkstyle.plugin.version}</version>-->
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>com.puppycrawl.tools</groupId>-->
+<!--                            <artifactId>checkstyle</artifactId>-->
+<!--                            <version>${checkstyle.version}</version>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
+<!--                </plugin>-->
+<!--            </plugins>-->
+<!--        </pluginManagement>-->
     </build>
 
     <!-- For deploying to maven central -->
     <distributionManagement>
         <!-- Snapshot repository -->
-<!--        <snapshotRepository>-->
-<!--            <id>ossrh</id>-->
-<!--            <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-<!--        </snapshotRepository>-->
         <snapshotRepository>
-            <id>myrepository</id>
-            <url>file:/Users/stephen.powis/Documents/code/ai-facebook-web/repo</url>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
