--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 
     <!-- Project Dependencies -->
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+
         <!-- Abstracted Http Client Library -->
         <dependency>
             <groupId>org.sourcelab.http</groupId>
